--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@ p {
 }
 
 .text-primary {
-    color: #FFF08F;
+    color: #599cdb;
 }
 
 .modal-content {
@@ -320,6 +320,11 @@ footer {
         padding: 100px 0;
     }
 
+    #about{
+        min-height: 300px;
+    }
+
+
 }
 
 .form-control {
@@ -479,8 +484,9 @@ fieldset[disabled] .btn-default.active {
 
 .btn.btn-primary {
     background-color: transparent;
-    border:1px solid #f0f0f0;
-    border-color:#f0f0f0;
+    border:1px solid #599cdb;
+    border-color:#599cdb;
+    color: #599cdb;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
